--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,28 @@
-development:
- adapter: mysql2
- encoding: utf8
- database: pro
- pool: 5
- username: root
- password: root
+ # SQLite version 3.x
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem 'sqlite3'
+#
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  username: postgres
+  password: pguser
 
+development:
+  <<: *default
+  database: expense
+
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
- adapter: mysql2
- encoding: utf8
- database: pro
- pool: 5
- username: root
- password: root
+  <<: *default
+  database: expense
 
 production:
- 
+  <<: *default
+  database: expense
